Added Bayes Empirical Method

--- a/ML01_TD2_Bayes_classifier.ipynb
+++ b/ML01_TD2_Bayes_classifier.ipynb
@@ -121,11 +121,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {
-        "id": "lWFxBfmBZfJA"
+        "id": "lWFxBfmBZfJA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9b00a5d7-d16c-4a43-f485-9a016795effd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+              "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+              "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+              "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+              "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 2., 2., 2., 2.,\n",
+              "       2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ],
       "source": [
         "# RÉPONSE À LA QUESTION:\n",
         "np.random.seed(407)\n",
@@ -135,9 +155,48 @@
         "sig2 = 0.2\n",
         "m1 = 80\n",
         "m2 = 20\n",
+        "n = m1+m2\n",
+        "\n",
+        "p = 0.2\n",
         "\n",
         "Xi_Classe1 = np.random.normal(mu1, sig1, m1)\n",
-        "Xi_Classe2 = np.random.normal(mu2, sig2, m2)\n"
+        "Xi_Classe2 = np.random.normal(mu2, sig2, m2)\n",
+        "\n",
+        "y1 = np.zeros((m1)) + 1\n",
+        "y2 = np.zeros((m2)) + 2\n",
+        "\n",
+        "y = np.concatenate((y1,y2))\n",
+        "y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGw4h7ewfc6W",
+        "outputId": "387f18f8-eb26-44ca-f893-c8f787206c6f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
       ]
     },
     {
@@ -150,9 +209,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o1yxSBrfbr2T",
-        "outputId": "3c701c61-05fd-42bb-fe52-0ec9ed6a9067"
+        "outputId": "0f36cd34-a4ba-467d-b5b6-b1b6869ca46f"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -176,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-QSjgEidbuuh",
-        "outputId": "fca707cd-edcd-49cc-d2e1-98a649b9d3e8"
+        "outputId": "07f1f5bf-aaa6-433c-a85c-3d912c6ccbb3"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +250,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -213,9 +272,9 @@
           "height": 265
         },
         "id": "T4AHVD9qbwLA",
-        "outputId": "6ab604ed-8636-4673-b6b6-3f7b0e747aa4"
+        "outputId": "ba7bc313-bc5c-4592-eb81-a1f9bca89672"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -277,14 +336,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "7m8iv1roZfJE"
+        "id": "7m8iv1roZfJE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6d3097a-a0da-4d6b-9238-4af84643835c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "erreur globale :  0.03\n",
+            "erreur par classe :  [[0.025 0.05 ]]\n"
+          ]
+        }
+      ],
       "source": [
         "# RÉPONSE À LA QUESTION 2.2:\n",
-        "\n"
+        "def BayesRule_theoretical(mu1, mu2, sigma1, sigma2):\n",
+        "    ## On utilise une \"factory\" pour fabriquer un classifieur X -> {1,2}\n",
+        "    def BRT(xi) :\n",
+        "        f1xi =  1/(sigma1*np.sqrt(2*np.pi)) * np.exp(-(xi - mu1)**2/(2*sigma1**2))\n",
+        "        f2xi =  1/(sigma2*np.sqrt(2*np.pi)) * np.exp(-(xi - mu2)**2/(2*sigma2**2))\n",
+        "        fXx = (1-p)*f1xi + p*f2xi\n",
+        "        PY1xi = (1-p)*f1xi/fXx\n",
+        "        PY2xi = p*f2xi/fXx\n",
+        "        yhat = np.argmax([PY1xi,PY2xi])+1\n",
+        "        return yhat\n",
+        "    return BRT\n",
+        "\n",
+        "BayesRule_th = BayesRule_theoretical(mu1, mu2, sig1, sig2)\n",
+        "y_hat = np.zeros(n)\n",
+        "\n",
+        "for i in range(0,m1):\n",
+        "    y_hat[i] = BayesRule_th(Xi_Classe1[i])\n",
+        "\n",
+        "for i in range(m2):\n",
+        "  y_hat[m1+i] = BayesRule_th(Xi_Classe2[i])\n",
+        "\n",
+        "err_globale = np.sum(y != y_hat) / n\n",
+        "print(\"erreur globale : \",err_globale)\n",
+        "\n",
+        "err_k = np.zeros((1,2))\n",
+        "for k in range(0,2):\n",
+        "    nk = np.sum(y==k+1)\n",
+        "    Ik = np.where(y == (k + 1))\n",
+        "    err_k[0,k] = sum(y_hat[Ik[0]]!=k+1)/nk\n",
+        "\n",
+        "print(\"erreur par classe : \", err_k)"
       ]
     },
     {
@@ -313,53 +415,130 @@
         "\n",
         "- **Réponse à la Question 3.1**\n",
         "\n",
-        "    1. ...\n",
+        "    1. Les moments empiriques convergent vers les moments théoriques. Donc on peut déduire les espérances et les variances. On suppose que les variables aléatoires suivent des lois normales.\n",
         " \n",
         "         "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "sqWcDykMZfJH"
+        "id": "sqWcDykMZfJH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c776a7fb-20ab-406c-e2c2-ab5fce75f865"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Taux erreur global du classifieur de Bayes empirique = 0.02\n",
+            "Taux erreurs par classe du classifieur de Bayes empirique = [0.0125 0.05  ]\n"
+          ]
+        }
+      ],
       "source": [
         "# RÉPONSE À LA QUESTION 3.2:\n",
-        "\n"
+        "\n",
+        "mu1hat = np.mean(Xi_Classe1)\n",
+        "sigma1hat = np.std(Xi_Classe1)\n",
+        "\n",
+        "\n",
+        "mu2hat = np.mean(Xi_Classe2)\n",
+        "sigma2hat = np.std(Xi_Classe2)\n",
+        "\n",
+        "p_hat = np.sum(y==2)/n\n",
+        "    \n",
+        "    \n",
+        "def BayesRule_empirique(mu1hat, mu2hat, sigma1hat, sigma2hat):\n",
+        "    ## On utilise une \"factory\" pour fabriquer un classifieur X -> {1,2}\n",
+        "    def BRT_emp(xi) :\n",
+        "        f1xi =  1/(sigma1hat*np.sqrt(2*np.pi)) * np.exp(-(xi - mu1hat)**2/(2*sigma1hat**2))\n",
+        "        f2xi =  1/(sigma2hat*np.sqrt(2*np.pi)) * np.exp(-(xi - mu2hat)**2/(2*sigma2hat**2))\n",
+        "        fXx = (1-p_hat)*f1xi + p_hat*f2xi\n",
+        "        PY1xi = (1-p_hat)*f1xi/fXx\n",
+        "        PY2xi = p_hat*f2xi/fXx\n",
+        "        yhat = np.argmax([PY1xi,PY2xi])+1\n",
+        "        return yhat\n",
+        "    return BRT_emp\n",
+        "\n",
+        "\n",
+        "# Diagnostic pour chaque patient à partir du classifieur de Bayes Empirique :\n",
+        "BayesRule_emp = BayesRule_empirique(mu1hat, mu2hat, sigma1hat, sigma2hat)\n",
+        "Yhat = np.zeros((n,1))\n",
+        "for i in range(0,m1):\n",
+        "    Yhat[i,0] = BayesRule_emp(Xi_Classe1[i])\n",
+        "\n",
+        "for i in range(0, m2):\n",
+        "  Yhat[i+m1, 0] = BayesRule_emp(Xi_Classe2[i])\n",
+        "  \n",
+        "    \n",
+        "\n",
+        "# Calculs des taux d'erreurs :\n",
+        "errGlobal = np.sum(y!=Yhat.ravel())/n\n",
+        "print('Taux erreur global du classifieur de Bayes empirique =', errGlobal)\n",
+        "\n",
+        "err_k = np.zeros((1,2))\n",
+        "for k in range(0,2):\n",
+        "    nk = np.sum(y==k+1)\n",
+        "    Ik = np.where(y == (k + 1))\n",
+        "    err_k[0,k] = sum(Yhat[Ik[0]]!=k+1)/nk\n",
+        "print('Taux erreurs par classe du classifieur de Bayes empirique =', err_k[0])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
-        "id": "HbRO8KwLZfJJ"
+        "id": "HbRO8KwLZfJJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "439dac6b-9a15-4632-a56f-8fa525dde101"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.018]\n",
+            "[0.02]\n"
+          ]
+        }
+      ],
       "source": [
         "# RÉPONSE À LA QUESTION 3.3:\n",
         "np.random.seed(407)\n",
-        "\n"
+        "\n",
+        "\n",
+        "n_Test_C1 = 800\n",
+        "n_Test_C2 = 200\n",
+        "n_Test = n_Test_C1 + n_Test_C2 \n",
+        "\n",
+        "Data_Test_Classe1 = np.random.normal(mu1, sig1, n_Test_C1)\n",
+        "Data_Test_Classe2 = np.random.normal(mu2, sig2, n_Test_C2)\n",
+        "Data_Test = np.concatenate((Data_Test_Classe1, Data_Test_Classe2))\n",
+        "y_test_C1 = np.ones((n_Test_C1, 1))\n",
+        "y_test_C2 = np.ones((n_Test_C2, 1)) + 1\n",
+        "y_test = np.concatenate((y_test_C1, y_test_C2), axis=0)\n",
+        "\n",
+        "\n",
+        "\n",
+        "pred = np.zeros((n_Test,2))\n",
+        "for i in range(n_Test):\n",
+        "  pred[i, 0] = BayesRule_th(Data_Test[i])\n",
+        "  pred[i, 1] = BayesRule_emp(Data_Test[i])\n",
+        "\n",
+        "err_Bayes_Th = np.sum(y != pred[:,0].ravel())/n_Test\n",
+        "err_Bayes_emp = np.sum(y != pred[:,1].ravel())/n_Test\n",
+        "\n",
+        "#print(np.reshape(pred[:,0], (-1, 1)))\n",
+        "print(sum(np.reshape(pred[:,0], (-1, 1)) != y_test)/n_Test)\n",
+        "print(sum(np.reshape(pred[:,1], (-1, 1)) != y_test)/n_Test)"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J82idfe2ZfJK"
-      },
-      "source": [
-        "## Exercice 2. Cas de plusieurs variables Gaussiennes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "UmYHt8gQZfJL"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -382,6 +561,7 @@
     },
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
