Store the values of the error rates of each classifier

--- a/ML01_TD2_Bayes_classifier.ipynb
+++ b/ML01_TD2_Bayes_classifier.ipynb
@@ -491,13 +491,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 53,
       "metadata": {
         "id": "HbRO8KwLZfJJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "439dac6b-9a15-4632-a56f-8fa525dde101"
+        "outputId": "4d55a510-6aa7-4a84-aea1-b30b40b1be07"
       },
       "outputs": [
         {
@@ -532,12 +532,12 @@
         "  pred[i, 0] = BayesRule_th(Data_Test[i])\n",
         "  pred[i, 1] = BayesRule_emp(Data_Test[i])\n",
         "\n",
-        "err_Bayes_Th = np.sum(y != pred[:,0].ravel())/n_Test\n",
-        "err_Bayes_emp = np.sum(y != pred[:,1].ravel())/n_Test\n",
+        "err_Bayes_Th = sum(np.reshape(pred[:,0], (-1, 1)) != y_test)/n_Test\n",
+        "err_Bayes_emp = sum(np.reshape(pred[:,1], (-1, 1)) != y_test)/n_Test\n",
         "\n",
         "#print(np.reshape(pred[:,0], (-1, 1)))\n",
-        "print(sum(np.reshape(pred[:,0], (-1, 1)) != y_test)/n_Test)\n",
-        "print(sum(np.reshape(pred[:,1], (-1, 1)) != y_test)/n_Test)"
+        "print(err_Bayes_Th)\n",
+        "print(err_Bayes_emp)"
       ]
     }
   ],
