Fixed a LaTex issue.

--- a/ML01_TD2_Bayes_classifier.ipynb
+++ b/ML01_TD2_Bayes_classifier.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Vh4_0_kwZfIy"
       },
@@ -71,12 +71,14 @@
         "- **Probabilités de générer un patient dans chaque classe**\n",
         "    1. Déterminer analytiquement la fonction de densité de distribution $f_X(x)$ de la variable aléatoire $X$ en fonction de $p$, $f_1(x)$  et $f_2(x)$.\n",
         "    2. Déterminer ensuite analytiquement la probabilité qu'un patient $i$ soit sain sachant que sa température est $X_i = x_i$. \n",
-        "    De même, déterminer analytiquement la probabilité qu'un patient $i$ soit malade sachant que sa température est $X_i = x_i$.\n",
+        "    \n",
+        "  De même, déterminer analytiquement la probabilité qu'un patient $i$ soit malade sachant que sa température est $X_i = x_i$.\n",
         "    \n",
         "  *Réponses aux questions 1. et 2.* \n",
         "    1. Puisque que la variable aléatoire $Y$ est une variable aléatoire discrète à 2 issues telle que $\\mathbb{P}(Y_i = 2) = p$, il s'en suit que $\\mathbb{P}(Y_i = 1) = 1-p$ (cf loi de Bernouilli).\n",
-        "> D'après la formule des probabilités totales, on a\n",
-        "> $$ \\begin{aligned}\n",
+        "D'après la formule des probabilités totales, on a\n",
+        "\n",
+        "$$ \\begin{aligned}\n",
         "f_{X}(x) & \\;=\\; f_1(x) \\, \\mathbb{P}(Y=1)  + f_2(x)  \\,\\mathbb{P}(Y=2) \\\\\n",
         "& \\;=\\; (1-p) f_1(x)  + p f_2(x) .\n",
         "\\end{aligned}\n",
@@ -121,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "lWFxBfmBZfJA",
         "colab": {
@@ -181,7 +183,7 @@
         "id": "HGw4h7ewfc6W",
         "outputId": "387f18f8-eb26-44ca-f893-c8f787206c6f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +213,7 @@
         "id": "o1yxSBrfbr2T",
         "outputId": "0f36cd34-a4ba-467d-b5b6-b1b6869ca46f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +239,7 @@
         "id": "-QSjgEidbuuh",
         "outputId": "07f1f5bf-aaa6-433c-a85c-3d912c6ccbb3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +276,7 @@
         "id": "T4AHVD9qbwLA",
         "outputId": "ba7bc313-bc5c-4592-eb81-a1f9bca89672"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "7m8iv1roZfJE",
         "colab": {
@@ -422,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "sqWcDykMZfJH",
         "colab": {
@@ -491,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "HbRO8KwLZfJJ",
         "colab": {
