--- a/ML01_TD2_Bayes_classifier.ipynb
+++ b/ML01_TD2_Bayes_classifier.ipynb
@@ -91,7 +91,9 @@
         " \\;=\\; \\frac{(1-p) \\, f_{1}(x_i)}{(1-p) f_1(x_i)  + p f_2(x_i) } .\n",
         "\\end{aligned}\n",
         "$$\n",
-        "> De plus, la probabilité qu'un patient $i$ soit malade sachant qu'il a une température $X_i = x_i$ est \n",
+        "\n",
+        "De plus, la probabilité qu'un patient $i$ soit malade sachant qu'il a une température $X_i = x_i$ est \n",
+        "\n",
         "> $$\n",
         "\\begin{aligned}\n",
         "\\mathbb{P}(Y_i=2|X_i=x_i)  \\;=\\; \\frac{\\mathbb{P}(Y_i=2)f_2(x_i)}{f_{X}(x_i)} \n",
